# win_stat_tg_bot

./: .env.example  .gitignore  README.md  bot.py  config.py  pyproject.toml  send_download_message.py
handlers/: __init__.py  movie_base.py  other.py  stats.py  torrent.py
middleware/: __init__.py  service_middleware.py
services/: __init__.py  jackett_client.py  keyboards.py  logger.py  movie_base_service.py  system_info.py  torrent_service.py  utils.py
